Selector Bar => Selector Logic Reworking in Progress

--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@appigram/react-rangeslider": "^2.2.19",
+    "@shopify/react-native-skia": "^0.1.176",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,9 +13,18 @@
     "jwt-decode": "^3.1.2",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
+    "multi-range-slider-react": "^2.0.2",
+    "rc-slider": "^10.1.1",
+    "rc-tooltip": "^6.0.1",
+    "rc-util": "^5.28.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.2.0",
+    "react-double-range-slider": "^3.0.1",
+    "react-native": "^0.71.3",
+    "react-native-svg": "^13.8.0",
+    "react-native-web": "^0.18.12",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "uuid": "^9.0.0",
