--- a/package.json
+++ b/package.json
@@ -2,10 +2,43 @@
   "name": "online-store",
   "version": "1.0.0",
   "scripts": {
+    "build": "webpack --config webpack.config.js",
+    "start": "webpack-dev-server --open --hot",
     "server": "npm run dev --prefix server",
     "client": "npm run start --prefix client",
-    "start": "start npm run server & start npm run client"
+    "prod": "webpack-dev-server --mode production --open --hot",
+    "dev": "start npm run server && start npm run client",
+    "startserver": "npm run start --prefix server",
+    "startprod:webpack": "start npm run server && start npm run start"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "util": "^0.12.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.3",
+    "dotenv-webpack": "^8.0.1",
+    "express": "^4.18.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "json-loader": "^0.5.7",
+    "less-loader": "^11.1.0",
+    "sass": "^1.58.3",
+    "sass-loader": "^13.2.0",
+    "source-map-loader": "^4.0.1",
+    "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.7",
+    "webpack": "^5.76.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-middleware": "^6.0.1",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0",
+    "webpack-node-externals": "^3.0.0"
   }
 }
