--- a/server/package.json
+++ b/server/package.json
@@ -4,25 +4,40 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "Petr_Elshin",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcryptjs-react": "^2.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.0",
+    "net": "^1.0.2",
     "nodemon": "^2.0.20",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0",
+    "stream": "^0.0.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.16"
+    "@types/express": "^4.17.16",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "express": "^4.18.2",
+    "https-browserify": "^1.0.0",
+    "os": "^0.1.2",
+    "os-browserify": "^0.3.0",
+    "path": "^0.12.7",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
+    "url": "^0.11.0",
+    "webpack-dev-middleware": "^6.0.1"
   }
 }
