--- a/package.json
+++ b/package.json
@@ -11,33 +11,71 @@
     "startserver": "npm run start --prefix server",
     "startprod:webpack": "start npm run server && start npm run start"
   },
-  "dependencies": {
-    "@babel/polyfill": "^7.12.1",
-    "util": "^0.12.5"
-  },
   "devDependencies": {
     "@babel/core": "^7.21.0",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.4",
+    "@svgr/webpack": "^7.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/enzyme": "^3.10.13",
+    "@types/imagemin": "^8.0.1",
+    "@types/jest": "^29.5.0",
+    "@types/module-alias": "^2.0.1",
+    "@types/sharp": "^0.31.1",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "@vue/preload-webpack-plugin": "^2.0.0",
     "babel-loader": "^9.1.2",
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "certbot": "^5.0.3",
     "clean-webpack-plugin": "^4.0.0",
+    "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
+    "css-minimizer-webpack-plugin": "^5.0.0",
     "dotenv-webpack": "^8.0.1",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-jest": "^27.2.1",
     "express": "^4.18.2",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
+    "html-webpack-plugin": "^5.5.1",
+    "image-minimizer-webpack-plugin": "^3.8.2",
+    "imagemin": "^8.0.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^10.0.1",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-transform-stub": "^2.0.0",
     "json-loader": "^0.5.7",
     "less-loader": "^11.1.0",
+    "mini-css-class-name": "^0.13.2",
+    "mini-css-extract-plugin": "^2.7.5",
+    "npm-check": "^6.0.1",
+    "obsolete-webpack-plugin": "^0.5.6",
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
     "source-map-loader": "^4.0.1",
-    "style-loader": "^3.3.1",
+    "style-loader": "^3.3.2",
+    "svg-url-loader": "^8.0.0",
+    "svgo": "^3.0.2",
     "terser-webpack-plugin": "^5.3.7",
-    "webpack": "^5.76.0",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
+    "typescript": "^5.0.4",
+    "url-loader": "^4.1.1",
+    "util": "^0.12.5",
+    "web-vitals": "^3.3.1",
+    "webpack": "^5.79.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-middleware": "^6.0.1",
-    "webpack-dev-server": "^4.11.1",
+    "webpack-dev-server": "^4.13.3",
     "webpack-merge": "^5.8.0",
     "webpack-node-externals": "^3.0.0"
   }
