--- a/client/package.json
+++ b/client/package.json
@@ -4,16 +4,29 @@
   "private": true,
   "dependencies": {
     "@appigram/react-rangeslider": "^2.2.19",
+    "@babel/core": "^7.21.4",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.4",
     "@shopify/react-native-skia": "^0.1.176",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/enzyme": "^3.10.13",
+    "@types/imagemin": "^8.0.1",
+    "@types/jest": "^29.5.1",
+    "@types/module-alias": "^2.0.1",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "axios": "^1.3.0",
     "bootstrap": "^5.2.3",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "jwt-decode": "^3.1.2",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
+    "mocker-api": "^2.9.8",
     "multi-range-slider-react": "^2.0.2",
+    "npm-check": "^6.0.1",
     "rc-slider": "^10.1.1",
     "rc-tooltip": "^6.0.1",
     "rc-util": "^5.28.0",
@@ -23,21 +36,24 @@
     "react-dom": "^18.2.0",
     "react-double-range-slider": "^3.0.1",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.80.0"
+  },
+  "overrides": {
+    "react-scripts": {
+      "typescript": "^5"
+    }
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -52,6 +68,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.20.2"
+    "@babel/preset-env": "^7.21.4"
   }
 }
