--- a/package.json
+++ b/package.json
@@ -3,30 +3,21 @@
   "version": "1.0.0",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "start": "webpack-dev-server --open --hot",
+    "start-webpack-dev": "webpack-dev-server --open --hot --config webpack.dev.js",
     "server": "npm run dev --prefix server",
     "client": "npm run start --prefix client",
-    "prod": "webpack-dev-server --mode production --open --hot",
+    "prod": "webpack-dev-server --mode production --open --hot  --config webpack.prod.js",
     "dev": "start npm run server && start npm run client",
     "startserver": "npm run start --prefix server",
-    "startprod:webpack": "start npm run server && start npm run start"
+    "startprod:webpack": "start npm run server && start npm run start",
+    "build-prod-webpack": "webpack --mode production --config webpack.prod.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.0",
+    "@babel/core": "^7.21.4",
     "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.21.4",
     "@svgr/webpack": "^7.0.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/enzyme": "^3.10.13",
-    "@types/imagemin": "^8.0.1",
-    "@types/jest": "^29.5.0",
-    "@types/module-alias": "^2.0.1",
-    "@types/sharp": "^0.31.1",
-    "@types/testing-library__jest-dom": "^5.14.5",
     "@vue/preload-webpack-plugin": "^2.0.0",
     "babel-loader": "^9.1.2",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
@@ -34,11 +25,10 @@
     "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^11.0.0",
+    "core-js": "^3.30.1",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^5.0.0",
     "dotenv-webpack": "^8.0.1",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-jest": "^27.2.1",
     "express": "^4.18.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.1",
@@ -48,9 +38,7 @@
     "imagemin-jpegtran": "^7.0.0",
     "imagemin-optipng": "^8.0.0",
     "imagemin-svgo": "^10.0.1",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "jest-transform-stub": "^2.0.0",
+    "interpolate-html-plugin": "^4.0.0",
     "json-loader": "^0.5.7",
     "less-loader": "^11.1.0",
     "mini-css-class-name": "^0.13.2",
@@ -68,10 +56,8 @@
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
-    "typescript": "^5.0.4",
     "url-loader": "^4.1.1",
     "util": "^0.12.5",
-    "web-vitals": "^3.3.1",
     "webpack": "^5.79.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-middleware": "^6.0.1",
