--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@types/testing-library__jest-dom": "^5.14.5",
     "axios": "^1.3.0",
     "bootstrap": "^5.2.3",
+    "express-fileupload": "^1.4.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jwt-decode": "^3.1.2",
