webpack client change

--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,44 @@
     "web-vitals": "^2.1.4",
     "webpack": "^5.80.0"
   },
+  "devDependencies": {
+    "@babel/preset-env": "^7.21.4",
+    "@svgr/webpack": "^7.0.0",
+    "babel-loader": "^9.1.2",
+    "certbot": "^5.0.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "compression-webpack-plugin": "^10.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-minimizer-webpack-plugin": "^5.0.0",
+    "dotenv-webpack": "^8.0.1",
+    "html-webpack-plugin": "^5.5.1",
+    "image-minimizer-webpack-plugin": "^3.8.2",
+    "imagemin": "^8.0.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^10.0.1",
+    "interpolate-html-plugin": "^4.0.0",
+    "json-loader": "^0.5.7",
+    "less-loader": "^11.1.0",
+    "mini-css-class-name": "^0.13.2",
+    "mini-css-extract-plugin": "^2.7.5",
+    "obsolete-webpack-plugin": "^0.5.6",
+    "sass-loader": "^13.2.2",
+    "source-map-loader": "^4.0.1",
+    "style-loader": "^3.3.2",
+    "svg-url-loader": "^8.0.0",
+    "svgo": "^3.0.2",
+    "terser-webpack-plugin": "^5.3.8",
+    "ts-loader": "^9.4.2",
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
+    "url-loader": "^4.1.1",
+    "util": "^0.12.5",
+    "webpack-cli": "^5.1.0",
+    "webpack-dev-middleware": "^6.1.0",
+    "webpack-merge": "^5.8.0",
+    "webpack-node-externals": "^3.0.0"
+  },
   "overrides": {
     "react-scripts": {
       "typescript": "^5"
@@ -54,7 +92,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-webpack-devServer": "webpack-dev-server --open --hot --config webpack.dev.js",
+    "start-webpack-prodServer": "webpack-dev-server --mode production --open --hot --config webpack.prod.js",
+    "build-webpack-prod": "webpack --mode production --config webpack.prod.js"
+
   },
   "browserslist": {
     "production": [
@@ -67,8 +109,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.21.4"
   }
 }
