--- a/package.json
+++ b/package.json
@@ -3,70 +3,13 @@
   "version": "1.0.0",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "start-webpack-dev": "webpack-dev-server --open --hot --config webpack.dev.js",
     "server": "npm run dev --prefix server",
     "client": "npm run start --prefix client",
-    "prod": "webpack-dev-server --mode production --open --hot  --config webpack.prod.js",
-    "dev": "start npm run server && start npm run client",
-    "startserver": "npm run start --prefix server",
-    "startprod:webpack": "start npm run server && start npm run start",
-    "build-prod-webpack": "webpack --mode production --config webpack.prod.js"
+    "start-reactClient-postServer": "start npm run server && start npm run client",
+    "start-webpack-dev": "npm run start-webpack-devServer --prefix client",
+    "start-webpack-prod": "start-webpack-prodServer --prefix client",
+    "startPostServer": "npm run start --prefix server",
+    "build-webpack-prod": "build-webpack-prod --prefix client"
   },
-  "devDependencies": {
-    "@babel/core": "^7.21.4",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.21.4",
-    "@babel/preset-react": "^7.18.6",
-    "@svgr/webpack": "^7.0.0",
-    "@vue/preload-webpack-plugin": "^2.0.0",
-    "babel-loader": "^9.1.2",
-    "case-sensitive-paths-webpack-plugin": "^2.4.0",
-    "certbot": "^5.0.3",
-    "clean-webpack-plugin": "^4.0.0",
-    "compression-webpack-plugin": "^10.0.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "core-js": "^3.30.1",
-    "css-loader": "^6.7.3",
-    "css-minimizer-webpack-plugin": "^5.0.0",
-    "dotenv-webpack": "^8.0.1",
-    "express": "^4.18.2",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.1",
-    "image-minimizer-webpack-plugin": "^3.8.2",
-    "imagemin": "^8.0.1",
-    "imagemin-gifsicle": "^7.0.0",
-    "imagemin-jpegtran": "^7.0.0",
-    "imagemin-optipng": "^8.0.0",
-    "imagemin-svgo": "^10.0.1",
-    "interpolate-html-plugin": "^4.0.0",
-    "json-loader": "^0.5.7",
-    "less-loader": "^11.1.0",
-    "mini-css-class-name": "^0.13.2",
-    "mini-css-extract-plugin": "^2.7.5",
-    "npm-check": "^6.0.1",
-    "obsolete-webpack-plugin": "^0.5.6",
-    "sass": "^1.58.3",
-    "sass-loader": "^13.2.0",
-    "source-map-loader": "^4.0.1",
-    "style-loader": "^3.3.2",
-    "svg-url-loader": "^8.0.0",
-    "svgo": "^3.0.2",
-    "terser-webpack-plugin": "^5.3.7",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.2",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths-webpack-plugin": "^4.0.1",
-    "url-loader": "^4.1.1",
-    "util": "^0.12.5",
-    "webpack": "^5.79.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-middleware": "^6.0.1",
-    "webpack-dev-server": "^4.13.3",
-    "webpack-merge": "^5.8.0",
-    "webpack-node-externals": "^3.0.0"
-  },
-  "dependencies": {
-    "express-fileupload": "^1.4.0",
-    "mocker-api": "^2.9.8"
-  }
+  "author": "Petr Elshin"
 }
