--- a/client/package.json
+++ b/client/package.json
@@ -56,6 +56,7 @@
     "core-js": "^3.30.2",
     "css-minimizer-webpack-plugin": "^5.0.0",
     "dotenv-webpack": "^8.0.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.1",
     "image-minimizer-webpack-plugin": "^3.8.2",
     "imagemin": "^8.0.1",
