--- a/client/package.json
+++ b/client/package.json
@@ -95,7 +95,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start-webpack-devServer": "webpack-dev-server --open --hot --config webpack.dev.js",
+    "start-webpack-devServer": "webpack-dev-server --open --hot --mode development --config webpack.dev.js",
     "start-webpack-prodServer": "webpack-dev-server --mode production --open --hot --config webpack.prod.js",
     "build-webpack-prod": "webpack --mode production --config webpack.prod.js"
   },
