--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@types/testing-library__jest-dom": "^5.14.5",
     "axios": "^1.3.0",
     "bootstrap": "^5.2.3",
+    "concurrently": "^8.0.1",
     "express-fileupload": "^1.4.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
@@ -57,6 +58,7 @@
     "css-minimizer-webpack-plugin": "^5.0.0",
     "dotenv-webpack": "^8.0.1",
     "file-loader": "^6.2.0",
+    "fs": "^0.0.1-security",
     "html-webpack-plugin": "^5.5.1",
     "image-minimizer-webpack-plugin": "^3.8.2",
     "imagemin": "^8.0.1",
@@ -69,7 +71,9 @@
     "less-loader": "^11.1.0",
     "mini-css-class-name": "^0.13.2",
     "mini-css-extract-plugin": "^2.7.5",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "obsolete-webpack-plugin": "^0.5.6",
+    "path": "^0.12.7",
     "sass-loader": "^13.2.2",
     "source-map-loader": "^4.0.1",
     "style-loader": "^3.3.2",
@@ -80,6 +84,7 @@
     "tsconfig-paths-webpack-plugin": "^4.0.1",
     "url-loader": "^4.1.1",
     "util": "^0.12.5",
+    "webpack-api-mocker": "^1.7.6",
     "webpack-cli": "^5.1.0",
     "webpack-dev-middleware": "^6.1.0",
     "webpack-merge": "^5.8.0",
@@ -95,9 +100,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "mocker1": "mocker ./mocker/api.js",
     "start-webpack-devServer": "webpack-dev-server --open --hot --mode development --config webpack.dev.js",
     "start-webpack-prodServer": "webpack-dev-server --mode production --open --hot --config webpack.prod.js",
-    "build-webpack-prod": "webpack --mode production --config webpack.prod.js"
+    "start-webpack-prodServer2": "concurrently \"npm:mocker1\" \"npm:start-webpack-prodServer\"",
+    "build-webpack-prod": "webpack --mode production --config webpack.prod.js",
+    "build-webpack-prod2": "concurrently \"npm:mocker1\" \"npm:build-webpack-prod\""
   },
   "browserslist": {
     "production": [
