--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,6 @@
     "@types/testing-library__jest-dom": "^5.14.5",
     "axios": "^1.3.0",
     "bootstrap": "^5.2.3",
-    "concurrently": "^8.0.1",
     "express-fileupload": "^1.4.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
@@ -100,12 +99,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "mocker1": "mocker ./mocker/api.js",
     "start-webpack-devServer": "webpack-dev-server --open --hot --mode development --config webpack.dev.js",
     "start-webpack-prodServer": "webpack-dev-server --mode production --open --hot --config webpack.prod.js",
-    "start-webpack-prodServer2": "concurrently \"npm:mocker1\" \"npm:start-webpack-prodServer\"",
-    "build-webpack-prod": "webpack --mode production --config webpack.prod.js",
-    "build-webpack-prod2": "concurrently \"npm:mocker1\" \"npm:build-webpack-prod\""
+    "build-webpack-prod": "webpack --mode production --config webpack.prod.js"
   },
   "browserslist": {
     "production": [
