--- a/mocker_server/package.json
+++ b/mocker_server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "fs": "^0.0.1-security",
     "mocker-api": "^2.9.8",
     "path": "^0.12.7",
