--- a/mocker_server/package.json
+++ b/mocker_server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "fs": "^0.0.1-security",
+    "https-browserify": "^1.0.0",
     "mocker-api": "^2.9.8",
     "path": "^0.12.7",
     "uuid": "^9.0.0"
