--- a/mocker_server/package.json
+++ b/mocker_server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./index.js"
+    "start": "node ./index.js",
+    "nodemon": "nodemon ./index.js --ext *"
   },
   "keywords": [],
   "author": "Petr_Elshin",
@@ -19,5 +20,11 @@
     "path": "^0.12.7",
     "react-scripts": "^5.0.1",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "connect-livereload": "^0.6.1",
+    "cookie-parser": "^1.4.6",
+    "livereload": "^0.9.3",
+    "nodemon": "^2.0.22"
   }
 }
