--- a/mocker_server/package.json
+++ b/mocker_server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./index.js",
-    "nodemon_start": "nodemon ./index.js --ext *"
+    "nodemon_start": "nodemon --ext * ./index.js"
   },
   "keywords": [],
   "author": "Petr_Elshin",
