--- a/mocker_server/vercel.json
+++ b/mocker_server/vercel.json
@@ -12,7 +12,7 @@
       "dest": "./index.js",
       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
       "headers": {
-        "Access-Control-Allow-Origin": "*"
+        "Access-Control-Allow-Origin": "https://store-petr-elshin-github-freeze35.netlify.app"
       }
     }
   ]
