--- a/mocker_server/package.json
+++ b/mocker_server/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./index.js",
-    "nodemon_start": "nodemon --ext * ./index.js"
+    "nodemon_start": "nodemon --ext * ./index.js",
+    "pm2_kill": "pm2 kill",
+    "pm2_start": "pm2 start ./index.js --watch"
   },
   "keywords": [],
   "author": "Petr_Elshin",
@@ -18,6 +20,7 @@
     "https-browserify": "^1.0.0",
     "mocker-api": "^2.9.8",
     "path": "^0.12.7",
+    "pm2": "^5.3.0",
     "react-scripts": "^5.0.1",
     "uuid": "^9.0.0"
   },
