--- a/mocker_server/package.json
+++ b/mocker_server/package.json
@@ -7,7 +7,7 @@
     "start": "node ./index.js",
     "nodemon_start": "nodemon --ext * ./index.js",
     "pm2_kill": "pm2 kill",
-    "pm2_start": "pm2 start ./index.js --watch"
+    "pm2_start": "pm2-runtime start ./index.js --watch"
   },
   "keywords": [],
   "author": "Petr_Elshin",
