--- a/mocker_server/package.json
+++ b/mocker_server/package.json
@@ -14,11 +14,13 @@
   "author": "Petr_Elshin",
   "license": "ISC",
   "dependencies": {
+    "connect-livereload": "^0.6.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "fs": "^0.0.1-security",
     "https-browserify": "^1.0.0",
+    "livereload": "^0.9.3",
     "mocker-api": "^2.9.8",
     "path": "^0.12.7",
     "pm2": "^5.3.0",
