--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL="https://online-store-mocker-server.onrender.com/"
+REACT_APP_API_URL="https://online-store-mocker-server.vercel.app/"
