--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.3.0",
     "bootstrap": "^5.2.3",
     "express-fileupload": "^1.4.0",
+    "gatsby-plugin-image": "^3.9.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jwt-decode": "^3.1.2",
