--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,6 @@
     "axios": "^1.3.0",
     "bootstrap": "^5.2.3",
     "express-fileupload": "^1.4.0",
-    "gatsby-plugin-image": "^3.9.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jwt-decode": "^3.1.2",
@@ -37,6 +36,7 @@
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.2.0",
     "react-double-range-slider": "^3.0.1",
+    "react-progressive-graceful-image": "^0.7.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "ts-jest": "^29.1.0",
@@ -50,6 +50,7 @@
     "@babel/preset-env": "^7.21.4",
     "@svgr/webpack": "^7.0.0",
     "babel-loader": "^9.1.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "certbot": "^5.0.3",
     "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^10.0.0",
