--- a/mocker_server/package.json
+++ b/mocker_server/package.json
@@ -24,6 +24,7 @@
     "mocker-api": "^2.9.8",
     "path": "^0.12.7",
     "pm2": "^5.3.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-scripts": "^5.0.1",
     "uuid": "^9.0.0"
   }
