--- a/mocker_server/vercel.json
+++ b/mocker_server/vercel.json
@@ -31,7 +31,7 @@
       ]
     },
     {
-      "source": "/device/(.*)",
+      "source": "/shop/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
