--- a/mocker_server/vercel.json
+++ b/mocker_server/vercel.json
@@ -8,35 +8,15 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/",
-      "methods": [
-        "GET",
-        "POST",
-        "PUT",
-        "PATCH",
-        "OPTIONS",
-        "DELETE"
-      ]
-    }
-  ],
-  "headers": [
-    {
-      "source": "/.*",
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "X-Requested-With, Access-Control-Allow-Origin, X-HTTP-Method-Override, Content-Type, Authorization, Accept"
-        },
-        {
-          "key": "Access-Control-Allow-Credentials",
-          "value": "true"
-        }
-      ]
+      "src": ".*",
+      "methods": ["GET", "POST", "OPTIONS","PUT"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept",
+        "Access-Control-Allow-Credentials": "true"
+      },
+      "dest": "index.js",
+      "continue": true
     }
   ]
 }
