--- a/mocker_server/vercel.json
+++ b/mocker_server/vercel.json
@@ -8,7 +8,7 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": ".*",
       "dest": "/",
       "methods": [
         "GET",
@@ -22,7 +22,7 @@
   ],
   "headers": [
     {
-      "source": "/.*",
+      "source": ".*",
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
