--- a/mocker_server/vercel.json
+++ b/mocker_server/vercel.json
@@ -8,6 +8,19 @@
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "/",
+      "methods": [
+        "GET",
+        "POST",
+        "PUT",
+        "PATCH",
+        "OPTIONS",
+        "DELETE"
+      ],
+      "continue": true
+    },
+    {
       "src": "/(.*)",
       "dest": "/",
       "methods": [
@@ -17,7 +30,21 @@
         "PATCH",
         "OPTIONS",
         "DELETE"
-      ]
+      ],
+      "continue": true
+    },
+    {
+      "src": "/device/(.*)",
+      "dest": "/",
+      "methods": [
+        "GET",
+        "POST",
+        "PUT",
+        "PATCH",
+        "OPTIONS",
+        "DELETE"
+      ],
+      "continue": true
     }
   ]
 }
